--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React with Redux and its DevTools with Relay and GraphQL via SocketIO-JWT",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,13 @@
   "bugs": {
     "url": "https://github.com/electricjesus/rrrgs/issues"
   },
-  "homepage": "https://github.com/electricjesus/rrrgs#readme"
+  "homepage": "https://github.com/electricjesus/rrrgs#readme",
+  "devDependencies": {
+    "babel-cli": "^6.6.0",
+    "babel-core": "^6.6.0",
+    "babel-plugin-transform-async-to-generator": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0"
+  }
 }
