--- a/package.json
+++ b/package.json
@@ -30,9 +30,24 @@
   "devDependencies": {
     "babel-cli": "^6.6.0",
     "babel-core": "^6.6.0",
+    "babel-eslint": "^5.0.0",
     "babel-plugin-transform-async-to-generator": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.1.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.1",
+    "graphql": "^0.4.18",
+    "graphql-sequelize": "^0.20.0",
+    "koa": "^1.1.2",
+    "koa-graphql": "^0.4.4",
+    "koa-mount": "^1.3.0",
+    "koa-session": "^3.3.1",
+    "sequelize": "^3.19.3",
+    "sqlite3": "^3.1.1"
   }
 }
