--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "babel-node index.js"
+    "start": "babel-node index.js",
+    "lint": "eslint .",
+    "sequelize:cli": "sequelize"
   },
   "repository": {
     "type": "git",
@@ -37,7 +39,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "^6.0.2",
-    "eslint-plugin-react": "^4.1.0"
+    "eslint-plugin-react": "^4.1.0",
+    "sequelize-cli": "^2.3.1"
   },
   "dependencies": {
     "chalk": "^1.1.1",
