--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "babel-node index.js",
     "lint": "eslint .",
-    "sequelize:cli": "sequelize"
+    "sequelize:cli": "sequelize",
+    "start-dev" : "npm run sequelize:cli -- db:migrate && npm start"
   },
   "repository": {
     "type": "git",
