--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "graphql": "^0.4.18",
     "graphql-sequelize": "^0.20.0",
     "koa": "^1.1.2",
+    "koa-cors": "0.0.16",
     "koa-graphql": "^0.4.4",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.4.0",
