--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
     "react/wrap-multilines": 2,
     "react/sort-comp": 0,
     "react/jsx-no-bind": 1,
-
+    "radix": [2, "as-needed"],
     "quotes": [2, "single", "avoid-escape"],
     "jsx-quotes": [2, "prefer-single"],
     "comma-dangle": [2, "never"],
